Uses the Bootstrap gap utility to avoid custom CSS

--- a/app/static/custom.css
+++ b/app/static/custom.css
@@ -59,7 +59,3 @@ blockquote {
 	margin-inline: auto;
 	max-width: 90ch;
 }
-
-.navbar-nav {
-	gap:2rem;
-}
